<resources>
    <string name="app_name">Sandwish</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="forgetpassword"> Forgot password?</string>
    <string name="login"> Log In</string>
    <string name="orlogin">Or Login using</string>
    <string name="orcreate">Create a new account</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="confrimpassword">Confirm Password</string>
    <string name="phonenumber">Phone Number</string>
    <string name="signup">Sign Up</string>
    //Messages
    <string name="connection_error">Connection Error</string>
    <string name="error_occurred">Server error</string>



















</resources>
